--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -4,9 +4,17 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
     link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')    
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
-  
+    include _includes/navbar
+    
+    .container
+      block content
+
+      footer
+        .row
+          .col-xs-12
+            small &copy; Simon Holmes 2014
+
     script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
